media-tools/sonarr/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  namespace: media-tools
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
        name: sonarr
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-type
                operator: In
                values:
                - worker
      containers:
      - name: sonarr
        image: linuxserver/sonarr:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8989
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 5
        volumeMounts:
        - name: sonarr-config
          mountPath: /config
        - name: media
          mountPath: media
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      volumes:
      - name: sonarr-config
        persistentVolumeClaim:
          claimName: longhorn-sonarr-config-pvc
      - name: media
        nfs:
          server: 192.168.1.3
          path: /mnt/md1/media
      automountServiceAccountToken: false
