media-tools/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarr-service
  name: sonarr-service
  namespace: media-tools
spec:
  type: ClusterIP
  ports:
  - port: 8989
    protocol: TCP
    targetPort: 8989
    name: web
  selector:
    app: sonarr
